Change group and mode for socket
WIthout these changes, any user can run arbitrary code as root, or change the ownership of a file to root with executable suid. These changes restrict the privileges to users in the admin (80) group.

--- a/Code/autopkgserver/autopkginstalld.plist
+++ b/Code/autopkgserver/autopkginstalld.plist
@@ -17,7 +17,9 @@
 			<key>SockPathName</key>
 			<string>/var/run/autopkginstalld</string>
 			<key>SockPathMode</key>
-			<integer>438</integer>
+			<integer>432</integer>
+			<key>SockPathGroup</key>
+			<integer>80</integer>
 		</dict>
 	</dict>
 </dict>
